"Add migrate and env-check to Swagger docs"
